--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap 5 theme for developers and startups</title>
+    <title>TK Ratnaningsih</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -274,9 +274,9 @@
     </footer>
      
     <!-- Javascript -->          
-    <script src="root/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script src="root/assets/plugins/gumshoe/gumshoe.polyfills.min.js"></script> 
-    <script src="root/assets/js/main.js"></script> 
+    <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/plugins/gumshoe/gumshoe.polyfills.min.js"></script> 
+    <script src="assets/js/main.js"></script> 
        
 </body>
 </html> 
